src/parser/CommonParserRulesParser.java
package parse;

// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue" })
public class CommonParserRulesParser extends Parser {
	static {
		RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int T__0 = 1, T__1 = 2, T__2 = 3, Add = 4, Sub = 5, Mul = 6, Div = 7, Mod = 8, Greater = 9,
			Less = 10, GreaterEqual = 11, LessEqual = 12, Equal = 13, NotEqual = 14, LogicalAnd = 15,
			LogicalOr = 16, LogicalNot = 17, RightShift = 18, LeftShift = 19, BitwiseAnd = 20,
			BitwiseOr = 21, BitwiseXor = 22, BitwiseNot = 23, Assign = 24, Increment = 25, Decrement = 26,
			Brackets = 27, LeftBracket = 28, RightBracket = 29, LeftParen = 30, RightParen = 31,
			LeftBrace = 32, RightBrace = 33, LineComment = 34, BlockComment = 35, Void = 36,
			Bool = 37, Int = 38, String = 39, New = 40, Class = 41, Null = 42, True = 43, False = 44,
			This = 45, If = 46, Else = 47, For = 48, While = 49, Break = 50, Continue = 51, Return = 52,
			IntegerLiteral = 53, StringLiteral = 54, Escape = 55, WhiteSpace = 56, NewLine = 57,
			Access = 58, Id = 59;
	public static final int RULE_prog = 0, RULE_stmt = 1, RULE_decl = 2, RULE_def = 3, RULE_varType = 4,
			RULE_primitiveType = 5, RULE_voidType = 6, RULE_initExpr = 7, RULE_nonPrimitiveType = 8,
			RULE_classSuite = 9, RULE_classDef = 10, RULE_classCtor = 11, RULE_returnType = 12,
			RULE_funcSuite = 13, RULE_funcDef = 14, RULE_funcDecl = 15, RULE_funcCall = 16,
			RULE_paramDefList = 17, RULE_paramInputList = 18, RULE_lambdaDef = 19,
			RULE_lambdaCall = 20, RULE_basicExpr = 21, RULE_exprStmt = 22, RULE_prefixOps = 23,
			RULE_expr = 24, RULE_assignUnit = 25, RULE_varDecl = 26, RULE_blockSuite = 27,
			RULE_jumpStmt = 28, RULE_condStmt = 29, RULE_whileStmt = 30, RULE_forInitUnit = 31,
			RULE_forCondUnit = 32, RULE_forStepUnit = 33, RULE_forStmt = 34;

	private static String[] makeRuleNames() {
		return new String[] {
				"prog", "stmt", "decl", "def", "varType", "primitiveType", "voidType",
				"initExpr", "nonPrimitiveType", "classSuite", "classDef", "classCtor",
				"returnType", "funcSuite", "funcDef", "funcDecl", "funcCall", "paramDefList",
				"paramInputList", "lambdaDef", "lambdaCall", "basicExpr", "exprStmt",
				"prefixOps", "expr", "assignUnit", "varDecl", "blockSuite", "jumpStmt",
				"condStmt", "whileStmt", "forInitUnit", "forCondUnit", "forStepUnit",
				"forStmt"
		};
	}

	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
				null, "','", "'->'", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'",
				"'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", "'>>'",
				"'<<'", "'&'", "'|'", "'^'", "'~'", "'='", "'++'", "'--'", "'[]'", "'['",
				"']'", "'('", "')'", "'{'", "'}'", null, null, "'void'", "'bool'", "'int'",
				"'string'", "'new'", "'class'", "'null'", "'true'", "'false'", "'this'",
				"'if'", "'else'", "'for'", "'while'", "'break'", "'continue'", "'return'",
				null, null, null, null, null, "'.'"
		};
	}

	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	private static String[] makeSymbolicNames() {
		return new String[] {
				null, null, null, null, "Add", "Sub", "Mul", "Div", "Mod", "Greater",
				"Less", "GreaterEqual", "LessEqual", "Equal", "NotEqual", "LogicalAnd",
				"LogicalOr", "LogicalNot", "RightShift", "LeftShift", "BitwiseAnd", "BitwiseOr",
				"BitwiseXor", "BitwiseNot", "Assign", "Increment", "Decrement", "Brackets",
				"LeftBracket", "RightBracket", "LeftParen", "RightParen", "LeftBrace",
				"RightBrace", "LineComment", "BlockComment", "Void", "Bool", "Int", "String",
				"New", "Class", "Null", "True", "False", "This", "If", "Else", "For",
				"While", "Break", "Continue", "Return", "IntegerLiteral", "StringLiteral",
				"Escape", "WhiteSpace", "NewLine", "Access", "Id"
		};
	}

	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() {
		return "java-escape";
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public CommonParserRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}

		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class, i);
		}

		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_prog;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterProg(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitProg(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitProg(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 612348748860882992L) != 0) {
					{
						{
							setState(70);
							stmt();
						}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public JumpStmtContext jumpStmt() {
			return getRuleContext(JumpStmtContext.class, 0);
		}

		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class, 0);
		}

		public CondStmtContext condStmt() {
			return getRuleContext(CondStmtContext.class, 0);
		}

		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class, 0);
		}

		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class, 0);
		}

		public DefContext def() {
			return getRuleContext(DefContext.class, 0);
		}

		public DeclContext decl() {
			return getRuleContext(DeclContext.class, 0);
		}

		public FuncSuiteContext funcSuite() {
			return getRuleContext(FuncSuiteContext.class, 0);
		}

		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_stmt;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterStmt(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitStmt(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitStmt(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(84);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1); {
					setState(76);
					jumpStmt();
				}
					break;
				case 2:
					enterOuterAlt(_localctx, 2); {
					setState(77);
					exprStmt();
				}
					break;
				case 3:
					enterOuterAlt(_localctx, 3); {
					setState(78);
					condStmt();
				}
					break;
				case 4:
					enterOuterAlt(_localctx, 4); {
					setState(79);
					forStmt();
				}
					break;
				case 5:
					enterOuterAlt(_localctx, 5); {
					setState(80);
					whileStmt();
				}
					break;
				case 6:
					enterOuterAlt(_localctx, 6); {
					setState(81);
					def();
				}
					break;
				case 7:
					enterOuterAlt(_localctx, 7); {
					setState(82);
					decl();
				}
					break;
				case 8:
					enterOuterAlt(_localctx, 8); {
					setState(83);
					funcSuite();
				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class, 0);
		}

		public FuncDeclContext funcDecl() {
			return getRuleContext(FuncDeclContext.class, 0);
		}

		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_decl;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterDecl(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitDecl(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitDecl(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1); {
					setState(86);
					varDecl();
				}
					break;
				case 2:
					enterOuterAlt(_localctx, 2); {
					setState(87);
					funcDecl();
				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefContext extends ParserRuleContext {
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class, 0);
		}

		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class, 0);
		}

		public LambdaDefContext lambdaDef() {
			return getRuleContext(LambdaDefContext.class, 0);
		}

		public DefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_def;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterDef(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitDef(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitDef(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final DefContext def() throws RecognitionException {
		DefContext _localctx = new DefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_def);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
				case Class:
					enterOuterAlt(_localctx, 1); {
					setState(90);
					classDef();
				}
					break;
				case Void:
				case Bool:
				case Int:
				case String:
				case Id:
					enterOuterAlt(_localctx, 2); {
					setState(91);
					funcDef();
				}
					break;
				case LeftBracket:
					enterOuterAlt(_localctx, 3); {
					setState(92);
					lambdaDef();
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarTypeContext extends ParserRuleContext {
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class, 0);
		}

		public NonPrimitiveTypeContext nonPrimitiveType() {
			return getRuleContext(NonPrimitiveTypeContext.class, 0);
		}

		public List<TerminalNode> Brackets() {
			return getTokens(CommonParserRulesParser.Brackets);
		}

		public TerminalNode Brackets(int i) {
			return getToken(CommonParserRulesParser.Brackets, i);
		}

		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_varType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterVarType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitVarType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitVarType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varType);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(97);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
					case Bool:
					case Int:
					case String: {
						setState(95);
						primitiveType();
					}
						break;
					case Id: {
						setState(96);
						nonPrimitiveType();
					}
						break;
					default:
						throw new NoViableAltException(this);
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(99);
								match(Brackets);
							}
						}
					}
					setState(104);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 5, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimitiveTypeContext extends ParserRuleContext {
		public TerminalNode Bool() {
			return getToken(CommonParserRulesParser.Bool, 0);
		}

		public TerminalNode Int() {
			return getToken(CommonParserRulesParser.Int, 0);
		}

		public TerminalNode String() {
			return getToken(CommonParserRulesParser.String, 0);
		}

		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_primitiveType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterPrimitiveType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitPrimitiveType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitPrimitiveType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final PrimitiveTypeContext primitiveType() throws RecognitionException {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_primitiveType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(105);
				_la = _input.LA(1);
				if (!(((_la) & ~0x3f) == 0 && ((1L << _la) & 962072674304L) != 0)) {
					_errHandler.recoverInline(this);
				} else {
					if (_input.LA(1) == Token.EOF)
						matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VoidTypeContext extends ParserRuleContext {
		public TerminalNode Void() {
			return getToken(CommonParserRulesParser.Void, 0);
		}

		public VoidTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_voidType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterVoidType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitVoidType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitVoidType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final VoidTypeContext voidType() throws RecognitionException {
		VoidTypeContext _localctx = new VoidTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_voidType);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(107);
				match(Void);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InitExprContext extends ParserRuleContext {
		public TerminalNode New() {
			return getToken(CommonParserRulesParser.New, 0);
		}

		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class, 0);
		}

		public List<TerminalNode> LeftBracket() {
			return getTokens(CommonParserRulesParser.LeftBracket);
		}

		public TerminalNode LeftBracket(int i) {
			return getToken(CommonParserRulesParser.LeftBracket, i);
		}

		public List<TerminalNode> RightBracket() {
			return getTokens(CommonParserRulesParser.RightBracket);
		}

		public TerminalNode RightBracket(int i) {
			return getToken(CommonParserRulesParser.RightBracket, i);
		}

		public List<TerminalNode> Brackets() {
			return getTokens(CommonParserRulesParser.Brackets);
		}

		public TerminalNode Brackets(int i) {
			return getToken(CommonParserRulesParser.Brackets, i);
		}

		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}

		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}

		public InitExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_initExpr;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterInitExpr(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitInitExpr(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitInitExpr(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final InitExprContext initExpr() throws RecognitionException {
		InitExprContext _localctx = new InitExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_initExpr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				setState(109);
				match(New);
				setState(110);
				varType();
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(111);
								match(LeftBracket);
								setState(113);
								_errHandler.sync(this);
								_la = _input.LA(1);
								if (((_la) & ~0x3f) == 0 && ((1L << _la) & 603549421459865648L) != 0) {
									{
										setState(112);
										expr(0);
									}
								}

								setState(115);
								match(RightBracket);
							}
						}
					}
					setState(120);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 7, _ctx);
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
				while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							{
								setState(121);
								match(Brackets);
							}
						}
					}
					setState(126);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input, 8, _ctx);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NonPrimitiveTypeContext extends ParserRuleContext {
		public TerminalNode Id() {
			return getToken(CommonParserRulesParser.Id, 0);
		}

		public NonPrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_nonPrimitiveType;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterNonPrimitiveType(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitNonPrimitiveType(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitNonPrimitiveType(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final NonPrimitiveTypeContext nonPrimitiveType() throws RecognitionException {
		NonPrimitiveTypeContext _localctx = new NonPrimitiveTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_nonPrimitiveType);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(127);
				match(Id);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassSuiteContext extends ParserRuleContext {
		public TerminalNode LeftBrace() {
			return getToken(CommonParserRulesParser.LeftBrace, 0);
		}

		public TerminalNode RightBrace() {
			return getToken(CommonParserRulesParser.RightBrace, 0);
		}

		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}

		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class, i);
		}

		public List<ClassCtorContext> classCtor() {
			return getRuleContexts(ClassCtorContext.class);
		}

		public ClassCtorContext classCtor(int i) {
			return getRuleContext(ClassCtorContext.class, i);
		}

		public ClassSuiteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_classSuite;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterClassSuite(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitClassSuite(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitClassSuite(this);
			else
				return visitor.visitChildren(this);
		}
	}

	public final ClassSuiteContext classSuite() throws RecognitionException {
		ClassSuiteContext _localctx = new ClassSuiteContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_classSuite);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(129);
				match(LeftBrace);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((_la) & ~0x3f) == 0 && ((1L << _la) & 576461783095574528L) != 0) {
					{
						setState(132);
						_errHandler.sync(this);
						switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
							case 1: {
								setState(130);
								decl();
							}
								break;
							case 2: {
								setState(131);
								classCtor();
							}
								break;
						}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				match(RightBrace);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDefContext extends ParserRuleContext {
		public Token className;

		public TerminalNode Class() {
			return getToken(CommonParserRulesParser.Class, 0);
		}

		public ClassSuiteContext classSuite() {
			return getRuleContext(ClassSuiteContext.class, 0);
		}

		public TerminalNode Id() {
			return getToken(CommonParserRulesParser.Id, 0);
		}

		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_classDef;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).enterClassDef(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof CommonParserRulesListener)
				((CommonParserRulesListener) listener).exitClassDef(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof CommonParserRulesVisitor)
				return ((CommonParserRulesVisitor<? extends T>) visitor).visitClassDef(this);
			else
				return visitor.visitChildren(this);
		}
	}
